--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,13 +8,13 @@
                     </a>
 
                     <div class="flexsocial whitei">
-                        <a href="https://www.facebook.com/kennyweiss.net" class="sociallink"><i
+                        <a target="_blank" href="https://www.facebook.com/kennyweiss.net" class="sociallink"><i
                                 class="fa-brands fa-facebook-f"></i> </a>
-                        <a href="https://www.instagram.com/kennyweiss.kw" class="sociallink"><i
+                        <a target="_blank" href="https://www.instagram.com/kennyweiss.kw" class="sociallink"><i
                                 class="fa-brands fa-instagram"></i> </a>
-                        <a href="https://twitter.com/kennyweisskw" class="sociallink"><i
+                        <a target="_blank" href="https://twitter.com/kennyweisskw" class="sociallink"><i
                                 class="fa-brands fa-x-twitter"></i> </a>
-                        <a href="https://www.tiktok.com/@kennyweisskw" class="sociallink"><i
+                        <a target="_blank" href="https://www.tiktok.com/@kennyweisskw" class="sociallink"><i
                                 class="fa-brands fa-tiktok"></i> </a>
                     </div>
                 </div>
