--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -39,7 +39,7 @@
                                         <p>Don't waste your time call us!</p>
                                         <p><strong>Contact today!</strong></p>
                                         <div class="button-row">
-                                        <a href="book-session.html" class="button">
+                                        <a routerLink="/book-session" class="button">
                                             book a call with kenny <span class="arrow"><i
                                                     class="fa-solid fa-arrow-right"></i></span>
                                         </a>
