--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -40,7 +40,7 @@
                     <ul class="doropmenu">
                         <li><a routerLink="/resources" routerLinkActive="active"
                                 [routerLinkActiveOptions]="{ exact: true }">Resources</a></li>
-                        <li><a routerLink="/blog" routerLinkActive="active"
+                        <li><a routerLink="/best-day-blog" routerLinkActive="active"
                                 [routerLinkActiveOptions]="{ exact: true }">Blog</a></li>
                         <li><a routerLink="/podcast" routerLinkActive="active"
                                 [routerLinkActiveOptions]="{ exact: true }">Podcast</a></li>
