--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -1,11 +1,10 @@
-
-<div *ngIf="loading" class="loader-maim"> 
-<div class="hm-spinner"></div>
+<div *ngIf="loading" class="loader-maim">
+    <div class="hm-spinner"></div>
 </div>
 
 
 <div class="blog">
-  <main class="mt" *ngIf="!loading">
+    <main class="mt" *ngIf="!loading">
 
         <section class="blog-section">
             <div class="container">
@@ -15,56 +14,57 @@
                 </div>
                 <div class="flex-blog">
                     <div class="newblog-post ">
-                          <div *ngFor="let post of posts | paginate: { itemsPerPage: itemsPerPage, currentPage: page }">                        
-                        <div class="news-block-two">
-                            <div class="inner-box">
-                                <div class="image">
-                                    <a [routerLink]="['/post', post.id]"> 
-  <!-- Agar featured image ho -->
-  <img *ngIf="!post.courseImage && post.featuredImage" 
-       [src]="post.featuredImage" 
-       alt="{{ post.title?.rendered }}" 
-       loading="lazy"> 
-                                    </a>
-                                </div>
-                                <div class="lower-content"> 
+                        <div *ngFor="let post of posts | paginate: { itemsPerPage: itemsPerPage, currentPage: page }">
+                            <div class="news-block-two">
+                                <div class="inner-box">
+                                    <div class="image">
+                                        <a [routerLink]="['/', post.slug]">
+                                            <!-- Agar featured image ho -->
+                                            <img *ngIf="!post.courseImage && post.featuredImage"
+                                                [src]="post.featuredImage" alt="{{ post.title?.rendered }}"
+                                                loading="lazy">
+                                        </a>
+                                    </div>
+                                    <div class="lower-content">
                                         <div class="category" *ngIf="post._embedded?.['wp:term']?.[0]?.length">
-  <span *ngFor="let cat of post._embedded['wp:term'][0]; let i = index">
-    {{ cat.name }}<span *ngIf="i < post._embedded['wp:term'][0].length - 1">, </span>
-  </span>
-</div>
- 
-                                    <div class="author-box">
-                                        <div class="box-inner">
-                                            <div class="author-image">
-                                                <img src="images/16.jpeg" loading="lazy" alt="">
-                                            </div>
-                                            by <span [innerHTML]="post._embedded?.author[0]?.name"></span>
+                                            <span *ngFor="let cat of post._embedded['wp:term'][0]; let i = index">
+                                                {{ cat.name }}<span
+                                                    *ngIf="i < post._embedded['wp:term'][0].length - 1">, </span>
+                                            </span>
+                                        </div>
 
+                                        <div class="author-box">
+                                            <div class="box-inner">
+                                                <div class="author-image">
+                                                    <img src="images/16.jpeg" loading="lazy" alt="">
+                                                </div>
+                                                by <span [innerHTML]="post._embedded?.author[0]?.name"></span>
+
+                                            </div>
                                         </div>
-                                    </div>
-                                    <a [routerLink]="['/post', post.id]"> 
-                                         <h3 [innerHTML]="post.title.rendered"></h3>
-                                    </a>
-                                    <div class="text">
-                                       <div [innerHTML]="post.excerpt.rendered"></div>
-                                    </div>
-                                    <ul class="post-meta">
-                                        <li><span class="icon fa fa-calendar"></span>24th March 2022</li>
-                                        <div class="buttonsser">
-                                            <a routerLink="/courses" routerLinkActive="active"> See All Courses</a>
-                                            <a routerLink="/book-session" routerLinkActive="active"> Book a Session  with kenny Weiss</a>
+                                        <a [routerLink]="['/', post.slug]">
+                                            <h3 [innerHTML]="post.title.rendered"></h3>
+                                        </a>
+                                        <div class="text">
+                                            <div [innerHTML]="post.excerpt.rendered"></div>
                                         </div>
-                                    </ul>
+                                        <ul class="post-meta">
+                                            <li><span class="icon fa fa-calendar"></span>24th March 2022</li>
+                                            <div class="buttonsser">
+                                                <a routerLink="/courses" routerLinkActive="active"> See All Courses</a>
+                                                <a routerLink="/book-session" routerLinkActive="active"> Book a Session
+                                                    with kenny Weiss</a>
+                                            </div>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
-                        </div> 
-                    </div> 
-                    <pagination-controls class="blogpagination" (pageChange)="page = $event"></pagination-controls>
+                        </div>
+                        <pagination-controls class="blogpagination" (pageChange)="page = $event"></pagination-controls>
 
                     </div>
-                    <div class="blog-rightside"> 
-                        <aside class="sidebar sticky-top"> 
+                    <div class="blog-rightside">
+                        <aside class="sidebar sticky-top">
                             <div class="sidebar-widget-two about-widget">
                                 <div class="widget-content">
                                     <div class="sidebar-title-two">
@@ -177,6 +177,5 @@
                 </div>
             </div>
         </section>
- 
+
     </main>
- 
