--- a/src/app/components/emotionalswiper/emotionalswiper.component.html
+++ b/src/app/components/emotionalswiper/emotionalswiper.component.html
@@ -1,4 +1,4 @@
-<div class="swiper emotional-swiper">
+<div #emotionalSwiper class="swiper emotional-swiper">
   <div class="swiper-wrapper">
     <div class="swiper-slide" *ngFor="let hservice of healservices">
       <div class="wellness-col bb-1">
