--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -369,7 +369,7 @@
                     </div>
                 </div>
                 <div class="right-content" data-aos="fade-up" data-aos-duration="200">
-                    <h5 class="tag-line">WHO WE ARE</h5>
+                    <h5 class="tag-line">Social cause involvement</h5>
                     <h3>Sandstone Care</h3>
                     <p>Kenny Weiss was honored and humbled when Deb from Sandstone Care‘s alcohol and drug treatment
                         facility reached out to ask him to supply a quote for their website and blog.<br></p>
@@ -819,7 +819,7 @@
                 <div class="online-right-coures">
                     <h4>Begin Your Journey To Emotional Authenticity</h4>
                     <p>Learn the first, foundational steps in developing Emotional Authenticity </p>
-                    <a routerLink="/courses" class="button">View All Products</a>
+                    <a routerLink="/courses" class="button">Explore all courses</a>
                 </div>
 
             </div>
@@ -829,9 +829,8 @@
     <section class="podcastvideos">
         <div class="container">
             <div class="videotestiomonials">
-                <h3>Tiffany's Transformation</h3>
-                <p>"I spent over $80,000 with all the big-name gurus and nothing changed. Since working with Kenny
-                    and the University, My whole life has shifted"</p>
+                <h3>Voices of Transformation</h3>
+                <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p>
             </div>
 
             <div class="videorow">
